--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.ico" />
     <!-- <base href="/introduce_MTH/" /> -->
-    <title>Vite App</title>
+    <title>introduce_MTH</title>
   </head>
   <body>
     <div id="app"></div>
